# codesignal

./: .gitignore  02-matrix-elements-sum.cpp  05-reverse-nodes-in-k-groups.cpp  CMakeLists.txt  gnuplot.sh
matrix-elements-sum/: plot.sh  raw-results-01.txt  raw-results-02.txt  raw-results-03.txt  raw-results-04.txt  raw-results-05.txt  raw-results-06.txt  raw-results-07.txt  raw-results-08.txt  raw-results-09.txt  raw-results-10.txt  raw-results-11.txt  raw-to-plot.py
src/: contains-close-nums.cpp  dishes.cpp  matrix-elements-sum.cpp  minesweeper.cpp  query.cpp  rotate.cpp  swap-lex-order.cpp
